--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/CallCenter.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/CallCenter.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MVC.Presentacion.Models;
-@model  InventarioPorPuntoVentaModel
+@model  CallCenterModel
 @Html.DevExpress().GetStyleSheets(
         new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
         new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
@@ -29,7 +29,7 @@
     </div>
     <section class="content home">
         <div class="container-fluid">
-            @using (Html.BeginForm("InventarioXPuntoVenta", "Reportes", FormMethod.Post))
+            @using (Html.BeginForm("CallCenter", "Reportes", FormMethod.Post))
             {
                 <div class="block-header">
                     <div class="row clearfix">
@@ -38,7 +38,7 @@
                             <ul class="breadcrumb padding-0">
                                 <li class="breadcrumb-item"><a href="index.html"><i class="zmdi zmdi-home"></i></a></li>
                                 <li class="breadcrumb-item">Reportes</li>
-                                <li class="breadcrumb-item">Inventario por Punto de Venta</li>
+                                <li class="breadcrumb-item">Historio de precio de Venta</li>
                             </ul>
                         </div>
                     </div>
@@ -48,31 +48,17 @@
                                 <div class="col-md-3">
                                     <strong>Al dia</strong>
                                     <div class="form-group">
+
                                         @Html.DevExpress().DateEdit(settings =>
-                                   {
-                                       settings.Name = "Fecha";
-                                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                       //settings.Properties.PickerType = DatePickerType.Months;
-                                       settings.Properties.CalendarProperties.FastNavProperties.InitialView = DatePickerType.Years;
-                                       settings.Properties.CalendarProperties.FastNavProperties.MaxView = DatePickerType.Years;
-                                       settings.Date = DateTime.Today;
-                                   }).Bind(Model.Fecha).GetHtml()
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <strong>Estaciones</strong>
-                                    <div class="form-group">
-                                        <ul>
-                                            @Html.EditorFor(m => m.Pipas)
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <strong>Estaciones</strong>
-                                    <div class="form-group">
-                                        <ul>
-                                            @Html.EditorFor(m => m.Estaciones)
-                                        </ul>
+                                      {
+                                          settings.Name = "Periodo";
+                                          settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                          settings.Properties.PickerType = DatePickerType.Months;
+                                          settings.Properties.CalendarProperties.FastNavProperties.InitialView = DatePickerType.Years;
+                                          settings.Properties.CalendarProperties.FastNavProperties.MaxView = DatePickerType.Years;
+                                          settings.Date = DateTime.Today;
+                                      }).Bind(Model.Periodo).GetHtml()
+
                                     </div>
                                 </div>
                                 <div class="col-md-3">
@@ -82,18 +68,16 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row clearfix">
-                                <div class="blockquote blockquote-info btn-round">
-                                    <div class="table-responsive">
-                                        @if (TempData["DataSource"] != null)
-                                        {
-                                            @Html.Partial("_CuboDeInformacionPartial", (List<InventarioPorPuntoVentaDTO>)TempData["DataSource"])
-                                        }
-                                        else
-                                        {
-                                            @Html.Partial("_CuboDeInformacionPartial", new List<InventarioPorPuntoVentaDTO>())
-                                        }
-                                    </div>
+                            <div class="row clearfix blockquote blockquote-info btn-round">
+                                <div class="table-responsive">
+                                    @if (TempData["DataSource"] != null)
+                                    {
+                                        @Html.Partial("_CuboDeInformacionPartial", (List<CallCenterDTO>)TempData["DataSource"])
+                                    }
+                                    else
+                                    {
+                                        @Html.Partial("_CuboDeInformacionPartial", new List<CallCenterDTO>())
+                                    }
                                 </div>
                             </div>
                         </div>
