--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -100,8 +100,16 @@
                             </ul>
                         </li>
                         <li class="menu_dark"><a href="@Url.Action("Index", "Pedidos")"><i class="material-icons"> phone </i><span class="icon-name">Call Center</span> </a></li>
-
-                        @*<li class="menu_dark"> @Html.ActionLink("Call Center","Index", "Pedidos")</li>*@
+                        <li>
+                            <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">poll</i><span>Reportes</span></a>
+                            <ul class="ml-menu">
+                                <li>@Html.ActionLink("Cuentas por pagar", "CuentasXPagar", "Reportes")</li>
+                                <li>@Html.ActionLink("Inv. Punto de venta", "InventarioXPuntoVenta", "Reportes")</li>
+                                <li>@Html.ActionLink("Hst. Precio de venta", "HistoricoPrecioVenta", "Reportes")</li>
+                                <li>@Html.ActionLink("Call Center", "CallCenter", "Reportes")</li>
+                                <li>@Html.ActionLink("Requisición", "Requisicion", "Reportes")</li>
+                            </ul>
+                        </li>
                         <li>
                             <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">drive_eta</i><span>Equipo de Transporte</span> </a>
                             <ul class="ml-menu">
@@ -130,10 +138,8 @@
                         <li>
                             <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">attach_money</i><span>Ventas</span> </a>
                             <ul class="ml-menu">
-                                @*<li><a href="ui_kit.html">Ventas</a></li>*@
                                 <li>@Html.ActionLink("Caja General", "Index", "CajaGeneral")</li>
-                                <li>@Html.ActionLink("Caja General Estación", "Estacion", "CajaGeneral")</li>
-                                @*<li>@Html.ActionLink("Caja General Pipa", "Pipa", "CajaGeneral")</li>*@
+                                <li>@Html.ActionLink("Caja General Estación", "Estacion", "CajaGeneral")</li>                              
                             </ul>
                         </li>
                         <li>
@@ -142,13 +148,7 @@
                                 <li>@Html.ActionLink("Carga Informacion", "Index", "Historico")</li>
                                 <li>@Html.ActionLink("Historico Ventas", "HistoricoVentas", "Historico")</li>
                             </ul>
-                        </li>
-                        @*<li>
-                                <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-assignment"></i><span>Inventario</span> </a>
-                                <ul class="ml-menu">
-                                    <li><a href=""></a></li>
-                                </ul>
-                            </li>*@
+                        </li>                     
                         <li>
                             <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Catálogos</span></a>
                             <ul class="ml-menu">
@@ -175,13 +175,7 @@
                                 <li>@Html.ActionLink("Precio de venta Otros", "Index", "PrecioVentaOtro")</li>
                             </ul>
                         </li>
-                        <li>
-                            <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Reportes</span></a>
-                            <ul class="ml-menu">
-                                <li>@Html.ActionLink("Cuentas por pagar", "CuentasXPagar", "Reportes")</li>
-                                <li>@Html.ActionLink("Inv. por punto de venta ", "InventarioXPuntoVenta", "Reportes")</li>
-                            </ul>
-                        </li>
+                      
                     }
                 </ul>
             </div>
