--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -108,6 +108,7 @@
                                 <li>@Html.ActionLink("Hst. Precio de venta", "HistoricoPrecioVenta", "Reportes")</li>
                                 <li>@Html.ActionLink("Call Center", "CallCenter", "Reportes")</li>
                                 <li>@Html.ActionLink("Requisición", "Requisicion", "Reportes")</li>
+                                <li>@Html.ActionLink("Ordenes de Compra", "OrdenCompraRep", "Reportes")</li>
                             </ul>
                         </li>
                         <li>
