JSA - Reporte Rendimiento Vehicular

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -109,6 +109,7 @@
                                 <li>@Html.ActionLink("Call Center", "CallCenter", "Reportes")</li>
                                 <li>@Html.ActionLink("Requisición", "Requisicion", "Reportes")</li>
                                 <li>@Html.ActionLink("Ordenes de Compra", "OrdenCompraRep", "Reportes")</li>
+                                <li>@Html.ActionLink("Rendimiento Vehicular", "RendimientoVehicular", "Reportes")</li>
                             </ul>
                         </li>
                         <li>
