JSA - Reporte Inventario por concepto
Terminado

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -110,6 +110,7 @@
                                 <li>@Html.ActionLink("Requisición", "Requisicion", "Reportes")</li>
                                 <li>@Html.ActionLink("Ordenes de Compra", "OrdenCompraRep", "Reportes")</li>
                                 <li>@Html.ActionLink("Rendimiento Vehicular", "RendimientoVehicular", "Reportes")</li>
+                                <li>@Html.ActionLink("Inv. Concepto", "InventarioXConcepto", "Reportes")</li>
                             </ul>
                         </li>
                         <li>
