JSA - Reporte Historico Vs Ventas
Ajustes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/YearsDTO.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/YearsDTO.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVC.Presentacion.Models.Historico.YearsDTO
+﻿@model MVC.Presentacion.Models.YearsDTO
     @Html.HiddenFor(m => m.Year) <!-- conserva los datos  -->
 <li style="list-style:none">@Html.CheckBoxFor(x => x.Seleccionar, new { @style = "width: 20px; height: 20px;" }) @Model.Year</li>
 
