--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -111,6 +111,7 @@
                                 <li>@Html.ActionLink("Ordenes de Compra", "OrdenCompraRep", "Reportes")</li>
                                 <li>@Html.ActionLink("Rendimiento Vehicular", "RendimientoVehicular", "Reportes")</li>
                                 <li>@Html.ActionLink("Inv. Concepto", "InventarioXConcepto", "Reportes")</li>
+                                <li>@Html.ActionLink("Hst. Vs Ventas", "HistoricoVsVentas", "Reportes")</li>
                             </ul>
                         </li>
                         <li>
