JSA - Reportes Corte caja
 Terminado
correcciones en etiqueta incorrecta en el resto de los reportes
Se detecta error en requisición: Corregido

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -112,6 +112,7 @@
                                 <li>@Html.ActionLink("Rendimiento Vehicular", "RendimientoVehicular", "Reportes")</li>
                                 <li>@Html.ActionLink("Inv. Concepto", "InventarioXConcepto", "Reportes")</li>
                                 <li>@Html.ActionLink("Hst. Vs Ventas", "HistoricoVsVentas", "Reportes")</li>
+                                <li>@Html.ActionLink("Corte de Caja", "CorteCaja", "Reportes")</li>
                             </ul>
                         </li>
                         <li>
