--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Nuevo.cshtml
@@ -276,7 +276,7 @@
                                     <div class="form-group">
                                         <div>
                                             Credito disponible:
-                                            <input name="DescuentoXKilo" class="form-control" type="number" />
+                                            <input name="CreditoDisponibleMonto" class="form-control" type="number" />
                                         </div>
                                     </div>
                                 </div>
